--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,58 @@
     @apply font-sans bg-gray-700 text-white;
   }
 }
+/* global.css */
+
+#nav-icon2 {
+  position: relative;
+  width: 30px;
+  height: 22px;
+  cursor: pointer;
+}
+
+#nav-icon2 span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: #ffffff;
+  opacity: 1;
+  transform: rotate(0deg);
+  transition: .25s ease-in-out;
+}
+
+#nav-icon2 span:nth-child(even) {
+  border-radius: 0 3px 3px 0;
+}
+
+#nav-icon2 span:nth-child(odd) {
+  border-radius: 3px 0 0 3px;
+}
+
+#nav-icon2 span:nth-child(1) {
+  top: 0;
+}
+
+#nav-icon2 span:nth-child(2) {
+  top: 6px;
+}
+
+#nav-icon2 span:nth-child(3) {
+  top: 12px;
+}
+
+#nav-icon2.open span:nth-child(1) {
+  transform: rotate(45deg);
+  top: 6px;
+}
+
+#nav-icon2.open span:nth-child(2) {
+  transform: rotate(-45deg);
+  top: 6px;
+}
+
+#nav-icon2.open span:nth-child(3) {
+  opacity: 0;
+}
+
+
