--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply font-sans bg-gray-700 text-white;
+    @apply font-sans text-neutral-200 bg-neutral-950;
   }
 }
 /* global.css */
